Cambios en estilos en parametros, historial, paciente

--- a/app/src/main/res/layout/activity_paciente.xml
+++ b/app/src/main/res/layout/activity_paciente.xml
@@ -15,12 +15,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:gravity="center_horizontal"
+            style="@style/TextAppearance.AppCompat.Subhead"
             android:text="@string/mensaje_titulo_crear_paciente"
-            android:textColor="@color/blue_dark"
-            android:textSize="@dimen/titulo"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            />
+
 
         <EditText
             android:id="@+id/etNombre"
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="true"
+            android:layout_marginTop="@dimen/margin_padding_8"
             android:inputType="textPersonName" />
 
         <EditText
