--- a/app/src/main/res/layout/activity_ajuste.xml
+++ b/app/src/main/res/layout/activity_ajuste.xml
@@ -10,7 +10,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/margin_padding_16">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:text="@string/cantidad_alerta"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            />
         <RelativeLayout
+            android:layout_marginTop="@dimen/margin_padding_8"
+            android:layout_marginBottom="@dimen/margin_padding_16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -32,5 +42,37 @@
                 android:contentDescription="@string/empty"
                 android:src="@drawable/baseline_arrow_drop_down_black_18" />
         </RelativeLayout>
+
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:text="@string/configuracion_botones"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/margin_padding_16"
+            android:textColor="@color/colorAccent"
+            />
+        <CheckBox
+            android:id="@+id/cbActivarVibracion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/vibrar"
+            android:layoutDirection="rtl"
+            android:layout_marginTop="@dimen/margin_padding_8"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="@dimen/margin_padding_8"
+            android:layout_marginTop="@dimen/margin_padding_8"
+            android:layout_marginBottom="@dimen/margin_padding_8"
+            android:background="@color/gray_dark" />
+        <CheckBox
+            android:id="@+id/cbActivarSonido"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="rtl"
+            android:text="@string/sonido" />
     </LinearLayout>
 </ScrollView>
