--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -11,8 +11,16 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/margin_padding_16"
         android:orientation="vertical">
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:text="@string/filtros"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            />
         <RelativeLayout
+            android:layout_marginTop="@dimen/margin_padding_8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -41,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="@dimen/margin_padding_8">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -83,7 +91,7 @@
             android:id="@+id/btnBuscar"
             android:text="@string/buscar"
             style="@style/ButtonPrimary"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/margin_padding_8"
             android:drawableStart="@drawable/ic_search_white"
             android:drawableLeft="@drawable/ic_search_white"/>
 
@@ -91,11 +99,11 @@
             android:id="@+id/listViewHeaderHistorialTabla"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"></ListView>
+            android:layout_marginTop="@dimen/margin_padding_8"></ListView>
 
         <View
             android:layout_height="1dip"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/margin_padding_8"
             android:layout_width="match_parent"
             android:background="@color/red80"/>
 
