--- a/app/src/main/res/drawable/button_success.xml
+++ b/app/src/main/res/drawable/button_success.xml
@@ -3,7 +3,7 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <corners android:radius="4dp"/>
-            <solid android:color="#28a745"/>
+            <solid android:color="#aa28a745"/>
         </shape>
     </item>
     <item android:state_pressed="true">
