--- a/app/src/main/res/drawable/button_danger.xml
+++ b/app/src/main/res/drawable/button_danger.xml
@@ -3,7 +3,7 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <corners android:radius="4dp"/>
-            <solid android:color="#dc3545"/>
+            <solid android:color="#aadc3545"/>
         </shape>
     </item>
     <item android:state_pressed="true">
