--- a/app/src/main/res/drawable/button_secondary_group.xml
+++ b/app/src/main/res/drawable/button_secondary_group.xml
@@ -2,25 +2,25 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <corners android:radius="4dp"/>
             <solid android:color="#aa6c757d"/>
+            <corners android:bottomRightRadius="4dp" android:topRightRadius="4dp" android:bottomLeftRadius="0dp" android:topLeftRadius="0dp" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <corners android:radius="4dp"/>
+            <corners android:bottomRightRadius="4dp" android:topRightRadius="4dp" android:bottomLeftRadius="0dp" android:topLeftRadius="0dp" />
             <solid android:color="#545b62" />
         </shape>
     </item>
-    <item android:state_hovered="true" android:state_focused="true">
+    <item android:state_focused="true" android:state_hovered="true">
         <shape android:shape="rectangle">
-            <corners android:radius="4dp"/>
+            <corners android:bottomRightRadius="4dp" android:topRightRadius="4dp" android:bottomLeftRadius="0dp" android:topLeftRadius="0dp" />
             <solid android:color="#5a6268" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="4dp"/>
+            <corners android:bottomRightRadius="4dp" android:topRightRadius="4dp" android:bottomLeftRadius="0dp" android:topLeftRadius="0dp" />
             <solid android:color="#6c757d"/>
         </shape>
     </item>
