--- a/app/src/main/res/drawable/button_warning.xml
+++ b/app/src/main/res/drawable/button_warning.xml
@@ -3,7 +3,7 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <corners android:radius="4dp"/>
-            <solid android:color="#ffc107"/>
+            <solid android:color="#aaffc107"/>
         </shape>
     </item>
     <item android:state_pressed="true">
