--- a/app/src/main/res/drawable/input.xml
+++ b/app/src/main/res/drawable/input.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
+            <stroke android:width="1dp" android:color="#ced4da" />
             <corners android:radius="4dp" />
             <solid android:color="#e9ecef" />
         </shape>
@@ -9,7 +10,6 @@
     <item android:state_focused="true" android:state_hovered="true">
         <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="#ced4da" />
-
             <solid android:color="#fff" />
             <corners android:radius="4dp" />
 
@@ -18,10 +18,8 @@
     <item>
         <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="#ced4da" />
-
             <solid android:color="#fff" />
             <corners android:radius="4dp" />
-
         </shape>
     </item>
 </selector>
