--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,6 +124,21 @@
         <item name="android:textColor">@color/body</item>
         <item name="android:textColorHint">@color/muted</item>
     </style>
-
+    <style name="InputGroup">
+        <item name="android:background">@drawable/input_group</item>
+        <item name="android:paddingLeft">@dimen/margin_padding_12</item>
+        <item name="android:paddingRight">@dimen/margin_padding_12</item>
+        <item name="android:paddingTop">@dimen/margin_padding_8</item>
+        <item name="android:paddingBottom">@dimen/margin_padding_8</item>
+        <item name="android:paddingStart">@dimen/margin_padding_12</item>
+        <item name="android:paddingEnd">@dimen/margin_padding_12</item>
+        <item name="android:textColor">@color/body</item>
+        <item name="android:textColorHint">@color/muted</item>
+    </style>
+    <style name="ButtonSecondaryGroup" parent="ButtonTextBody">
+        <item name="android:background">@drawable/button_secondary_group</item>
+        <item name="android:paddingTop">@dimen/margin_padding_8</item>
+        <item name="android:paddingBottom">@dimen/margin_padding_8</item>
+    </style>
     <!--Buttons Bootstrap-->
 </resources>
