--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,6 +109,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
 
+            <!--<com.google.android.gms.ads.AdView
+                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView"
+                android:layout_marginTop="@dimen/margin_padding_8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/add_unit_id_one">
+            </com.google.android.gms.ads.AdView>-->
+
+
         </LinearLayout>
     </ScrollView>
 
