--- a/app/src/main/res/layout/activity_calculo.xml
+++ b/app/src/main/res/layout/activity_calculo.xml
@@ -5,198 +5,206 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.CalculoActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:gravity="left"
-            android:text="@string/asociar_a_paciente"
-            android:textColor="@color/blue_dark"
-            android:textSize="@dimen/subtitulo_3"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <Spinner
-                android:id="@+id/spinnerPaciente"
-                style="@style/Input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/margin_padding_6"
-                android:clickable="false"
-                android:contentDescription="@string/empty"
-                android:src="@drawable/baseline_arrow_drop_down_black_18" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-
-            <EditText
-                android:id="@+id/etCantidad"
-                style="@style/Input"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/btnCalcular"
-                android:layout_toLeftOf="@+id/btnCalcular"
-                android:hint="@string/input_cantidad_total"
-                android:inputType="number" />
+                android:layout_marginBottom="8dp"
+                android:gravity="left"
+                android:text="@string/asociar_a_paciente"
+                android:textColor="@color/blue_dark"
+                android:textSize="@dimen/subtitulo_3"
+                android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btnCalcular"
-                style="@style/ButtonPrimary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="@dimen/margin_padding_8"
-                android:layout_marginLeft="@dimen/margin_padding_8"
-                android:text="@string/calcular" />
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <ListView
-            android:id="@+id/listViewHeaderTabla"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+                <Spinner
+                    android:id="@+id/spinnerPaciente"
+                    style="@style/Input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dip"
-            android:background="@color/red80" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/margin_padding_6"
+                    android:clickable="false"
+                    android:contentDescription="@string/empty"
+                    android:src="@drawable/baseline_arrow_drop_down_black_18" />
+            </RelativeLayout>
 
-        <ListView
-            android:id="@+id/listViewTabla"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="2dp"></ListView>
-
-        <TableLayout
-            android:id="@+id/tablaResultado"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:id="@+id/tablaHeaderResultado"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/blue">
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
 
-                <TextView
-                    android:id="@+id/tvVacio"
-                    style="@style/HeaderStyle"
+                <EditText
+                    android:id="@+id/etCantidad"
+                    style="@style/Input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/btnCalcular"
+                    android:layout_toLeftOf="@+id/btnCalcular"
+                    android:hint="@string/input_cantidad_total"
+                    android:inputType="number" />
 
-                <TextView
-                    android:id="@+id/tvConNrbc"
-                    style="@style/HeaderStyle"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/btnCalcular"
+                    style="@style/ButtonPrimary"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/tabla_header_con_nrbc" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginStart="@dimen/margin_padding_8"
+                    android:layout_marginLeft="@dimen/margin_padding_8"
+                    android:text="@string/calcular" />
+            </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/tvSinNRbc"
-                    style="@style/HeaderStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/tabla_header_sin_nrbc" />
-            </TableRow>
+            <ListView
+                android:id="@+id/listViewHeaderTabla"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></ListView>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dip"
                 android:background="@color/red80" />
 
-            <TableRow
+            <ListView
+                android:id="@+id/listViewTabla"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="2dp"></ListView>
+
+            <TableLayout
+                android:id="@+id/tablaResultado"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/tvTotalWbc"
+                <TableRow
+                    android:id="@+id/tablaHeaderResultado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/tabla_total_wbc"
-                    android:textColor="@color/black" />
+                    android:background="@color/blue">
 
-                <TextView
-                    android:id="@+id/tvTotalConNrbc"
+                    <TextView
+                        android:id="@+id/tvVacio"
+                        style="@style/HeaderStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="" />
+
+                    <TextView
+                        android:id="@+id/tvConNrbc"
+                        style="@style/HeaderStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/tabla_header_con_nrbc" />
+
+                    <TextView
+                        android:id="@+id/tvSinNRbc"
+                        style="@style/HeaderStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/tabla_header_sin_nrbc" />
+                </TableRow>
+
+                <View
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/gray"
-                    android:gravity="center"
-                    android:textColor="@color/black" />
+                    android:layout_height="1dip"
+                    android:background="@color/red80" />
 
-                <TextView
-                    android:id="@+id/tvTotalSinNRbc"
+                <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/gray_dark"
-                    android:gravity="center"
-                    android:textColor="@color/black" />
-            </TableRow>
-        </TableLayout>
+                    android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="end"
-            android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tvTotalWbc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/tabla_total_wbc"
+                        android:textColor="@color/black" />
 
-            <Button
-                android:id="@+id/btnGuardar"
-                style="@style/ButtonSuccess"
-                android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/tvTotalConNrbc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/gray"
+                        android:gravity="center"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/tvTotalSinNRbc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/gray_dark"
+                        android:gravity="center"
+                        android:textColor="@color/black" />
+                </TableRow>
+            </TableLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_save_white_18"
-                android:drawableLeft="@drawable/baseline_save_white_18"
-                android:text="@string/guardar" />
+                android:layout_marginTop="12dp"
+                android:gravity="end"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btnExportar"
-                style="@style/ButtonSecondary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_padding_8"
-                android:layout_marginLeft="@dimen/margin_padding_8"
-                android:drawableStart="@drawable/baseline_save_alt_white_18"
-                android:drawableLeft="@drawable/baseline_save_alt_white_18"
-                android:text="@string/exportar" />
+                <Button
+                    android:id="@+id/btnGuardar"
+                    style="@style/ButtonSuccess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/baseline_save_white_18"
+                    android:drawableLeft="@drawable/baseline_save_white_18"
+                    android:text="@string/guardar" />
 
+                <Button
+                    android:id="@+id/btnExportar"
+                    style="@style/ButtonSecondary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_padding_8"
+                    android:layout_marginLeft="@dimen/margin_padding_8"
+                    android:drawableStart="@drawable/baseline_save_alt_white_18"
+                    android:drawableLeft="@drawable/baseline_save_alt_white_18"
+                    android:text="@string/exportar" />
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 </ScrollView>
