Cambios en iconos

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -139,7 +139,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        android:background="#E6E6E6"
+        android:background="@color/white"
         app:headerLayout="@layout/header_navigation_drawer"
         app:menu="@menu/nav_options" />
 </android.support.v4.widget.DrawerLayout>
