--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -19,9 +19,18 @@
             android:orientation="vertical"
             android:padding="@dimen/margin_padding_16">
 
+            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/avBannerHistorial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/admob_unit_id_historial" />
+
             <TextView
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
+
+                android:layout_marginTop="@dimen/margin_padding_8"
                 android:layout_height="wrap_content"
                 android:text="@string/filtros"
                 android:textColor="@color/colorAccent"
@@ -75,7 +84,7 @@
                     <TextView
                         android:id="@+id/tvFechaIni"
                         style="@style/InputGroup"
-                        android:layout_width="184dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="1dp"
                         android:layout_marginRight="1dp"
@@ -117,7 +126,6 @@
                         style="@style/InputGroup"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
                         android:hint="YYYY-MM-DD"
                         android:layout_toLeftOf="@id/btnFechaFin"
                         android:layout_toStartOf="@+id/btnFechaFin"/>
