--- a/app/src/main/res/menu/nav_options.xml
+++ b/app/src/main/res/menu/nav_options.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:id="@+id/menu_top" android:checkableBehavior="single">
-        <!--item android:id="@+id/menu_counter"
-            android:title="@string/menu_counter" android:icon="@drawable/ic_wbc"/-->
+    <group android:id="@+id/menu_top" android:checkableBehavior="none">
         <item android:id="@+id/menu_patient"
             android:title="@string/menu_patient" android:icon="@drawable/ic_patient"/>
         <item android:id="@+id/menu_record"
@@ -12,5 +10,10 @@
     <group android:id="@+id/menu_bottom" android:checkableBehavior="none">
         <item android:id="@+id/menu_setting"
             android:title="@string/menu_setting" android:icon="@drawable/ic_setting"/>
+
+        <item android:id="@+id/menu_about"
+            android:title="@string/menu_about" android:icon="@drawable/ic_about"/>
     </group>
+
+
 </menu>
