Cambios en iconos y acerca de

--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="top|bottom"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="28dp"
-        app:srcCompat="@drawable/wbcscounter"/>
+        app:srcCompat="@drawable/hemacount"/>
 
     <TextView
         android:id="@+id/tvUserName"
