--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -15,30 +15,60 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/margin_padding_16">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:layout_gravity="center"
-            android:textSize="@dimen/titulo"
-            android:textStyle="bold"
-            />
+        android:padding="@dimen/margin_padding_16"
+        android:background="@color/black25">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_foreground"
-            android:layout_gravity="center" />
+            android:adjustViewBounds="true"
+            android:maxWidth="260dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/hemacount_title"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/margin_padding_8"/>
+
+        <ImageView
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/hemacount"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/margin_padding_8"
+            android:contentDescription="@string/app_name"/>
+        <TextView
+            android:layout_marginTop="@dimen/margin_padding_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/white"
+            android:text="@string/creada_por"
+            android:textStyle="bold"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/mensaje_about"
-            android:textSize="@dimen/subtitulo_2"
+            android:gravity="center_horizontal"
+            android:text="@string/creadores"
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:textColor="@color/white"/>
+        <TextView
+            android:layout_marginTop="@dimen/margin_padding_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/white"
+            android:text="@string/colaboracion_con"
             android:textStyle="bold"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/colaboradores"
+            style="@style/TextAppearance.AppCompat.Subhead"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
 </LinearLayout>
