--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="yellow_dark">#f39c12</color>
     <color name="orange">#e67e22</color>
     <color name="black">#000000</color>
+    <color name="black25">#40000000</color>
     <color name="gray">#E6E6E6</color>
     <color name="gray_dark">#aeb6bf</color>
 
