--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -141,46 +141,6 @@
                 </RelativeLayout>
             </LinearLayout>
 
-            <!-- <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_padding_8"
-                android:orientation="horizontal">
-
-               <TextView
-                    android:id="@+id/tvFechaIni"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/gray"
-                    android:gravity="center"
-                    android:hint="YYYY-MM-dd" />
-
-                <ImageButton
-                    android:id="@+id/btnFechaIni"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/transparent"
-                    android:src="@android:drawable/ic_menu_my_calendar" />
-
-                <TextView
-                    android:id="@+id/tvFechaFin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/gray"
-                    android:gravity="center"
-                    android:hint="YYYY-MM-dd" />
-
-                <ImageButton
-                    android:id="@+id/btnFechaFin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/transparent"
-                    android:src="@android:drawable/ic_menu_my_calendar" />
-
-            </LinearLayout>-->
-
             <Button
                 android:id="@+id/btnBuscar"
                 style="@style/ButtonPrimary"
@@ -195,24 +155,27 @@
                 android:id="@+id/listViewHeaderHistorialTabla"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_padding_8"></ListView>
+                android:layout_marginTop="@dimen/margin_padding_8"/>
 
+
+<!--
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dip"
                 android:layout_marginTop="@dimen/margin_padding_8"
-                android:background="@color/red80" />
+                android:background="@color/red80" />-->
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical" />
-
+                android:scrollbars="vertical"
+                />
+<!--
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dip"
-                android:background="@color/red80" />
+                android:background="@color/red80" />-->
 
         </LinearLayout>
     </LinearLayout>
