--- a/app/src/main/res/layout/activity_paciente.xml
+++ b/app/src/main/res/layout/activity_paciente.xml
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar"/>
+            layout="@layout/toolbar" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,23 +22,21 @@
             android:padding="@dimen/margin_padding_16">
 
             <TextView
+                style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/TextAppearance.AppCompat.Subhead"
                 android:text="@string/mensaje_titulo_crear_paciente"
-                android:textStyle="bold"
                 android:textColor="@color/colorAccent"
-                />
-
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/etNombre"
                 style="@style/Input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusable="true"
                 android:layout_marginTop="@dimen/margin_padding_8"
-                android:inputType="textPersonName" />
+                android:focusable="true"
+                android:inputType="textPersonName|textCapWords" />
 
             <EditText
                 android:id="@+id/etPrimerApellido"
@@ -45,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_padding_8"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|textCapWords" />
 
             <EditText
                 android:id="@+id/etSegundoApellido"
@@ -54,14 +53,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_padding_8"
                 android:hint="@string/segundo_apellido"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|textCapWords" />
 
             <RadioGroup
                 android:id="@+id/radioGroupSexo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_padding_8"
-
                 android:orientation="vertical">
 
                 <RadioButton
@@ -87,7 +85,6 @@
                 android:hint="@string/telefono"
                 android:inputType="phone" />
 
-
             <Button
                 android:id="@+id/btnCrearPaciente"
                 style="@style/ButtonPrimary"
@@ -103,8 +100,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_padding_8"
                 android:text="@string/cancelar" />
-
-
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
